--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 
     <!-- Facebook Preview (Open Graph) -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content=" " />
-    <meta property="og:description" content=" " />
+    <!-- 👇 Không ghi og:url để Facebook không in link -->
+    <meta property="og:title" content="‎" /> <!-- ký tự trắng đặc biệt -->
+    <meta property="og:description" content="‎" />
     <meta property="og:image" content="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=1200" />
-    <meta property="og:url" content="https://yourusername.github.io/shopee-preview/" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <title>Đang chuyển hướng...</title>
 
     <script>
-      // Tự động chuyển đến link Shopee sau 0.5 giây
+      // Chuyển hướng đến Shopee sau 0.5 giây
       setTimeout(() => {
         window.location.href = "https://s.shopee.vn/8ANWzpuFi2";
       }, 500);
@@ -29,7 +29,7 @@
         height: 100vh;
         margin: 0;
         font-family: sans-serif;
-        background: #f5f5f5;
+        background: #fafafa;
       }
       .loading {
         font-size: 18px;
